<resources>
    <string name="app_name">Lektirko</string>
    <string name="name">Ime</string>
    <string name="lastName">Prezime</string>
    <string name="identifier">OIB</string>
    <string name="login">PRIJAVI ME</string>
    <string name="search_local_books">Pretraži spremljene lektire</string>
    <string name="my_books">Moje lektire</string>
    <string name="add_book">Dodaj knjigu</string>
    <string name="book_title">Naslov knjige</string>
    <string name="book_author">Ime i prezime pisca</string>
    <string name="save">Spremi</string>
    <string name="saved">Spremljeno</string>
    <string name="cancel">Odustani</string>
    <string name="answered">Odgovoreno</string>
    <string name="not_answered">Nije odgovoreno</string>
    <string name="log_reading">Evidentiraj čitanje</string>
    <string name="hours_read">Sati čitano:</string>
    <!--<string name="questions_answered">Pitanja \nodgovoreno:</string>-->
    <string name="questions_answered"> </string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="placeholder">Placeholder</string>
    <string name="reading_date">Datum čitanja</string>
    <string name="reading_duration">Trajanje čitanja</string>
    <string name="reading_number_of_pages">Broj stranica</string>
    <string name="add_reading_log">Dodaj zapis</string>
    <string name="reading_log">Dnevnik čitanja</string>
    <string name="add_question">Dodaj pitanje</string>
    <string name="question">Pitanje</string>
    <string name="answer">Odgovor</string>
    <string name="error">Dogodila se greška</string>

    <string name="change_font">ODABERI FONT</string>
    <string name="font_openDyslexic">Open Dyslexic 3</string>
    <string name="font_tnr">Times New Roman</string>
    <string name="font_arial">Arial</string>
    <string name="quick_fox">The quick brown fox jumps over the lazy dog</string>
    <string name="settings">Postavke</string>
    <string name="preference_file_key">preference_settings_key</string>
    <string name="email_to">E-mail adresa</string>
    <string name="confirm_send_email">Jeste li sigurni da želite poslati odgovore ?</string>
    <string name="send">Pošalji</string>
    <string name="send_answers">Pošalji\nodgovore</string>
    <string name="confirm_delete">Jeste li sigurni da želite obrisati knjigu</string>
    <string name="delete">Obriši</string>
</resources>
