<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.font.FontActivity">

    <TextView
            android:text="@string/change_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold" android:textSize="30sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_save_font"
            style="@style/AppTheme"
            android:background="@drawable/btn_rounded"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="100dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btn_save_font" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/fontGroup">
        <RadioButton
                android:text="@string/font_arial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton_arial" android:textSize="16sp"/>
        <RadioButton
                android:text="@string/font_tnr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton_tnr" android:textSize="16sp"/>
        <RadioButton
                android:text="@string/font_openDyslexic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton_openDyslexic"
                android:textSize="16sp"/>
    </RadioGroup>
    <TextView
            android:text="@string/quick_fox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_quick_fox"
            android:paddingHorizontal="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fontGroup" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="34sp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
