<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BookListActivity" android:paddingStart="20dp" android:paddingEnd="20dp" android:paddingTop="50dp"
        android:paddingBottom="50dp">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/book_title"
            style="@style/AppTheme"
            android:ems="10"
            android:id="@+id/book_title"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/book_title" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="text"
            android:hint="@string/book_author"
            android:ems="10"
            style="@style/AppTheme"
            android:id="@+id/book_author"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/identifier" app:layout_constraintTop_toBottomOf="@+id/book_title"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content" android:id="@+id/btn_save"
            style="@style/AppTheme"
            android:background="@drawable/btn_small_rounded"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/book_author" app:layout_constraintStart_toStartOf="parent"
            android:onClick="clickSave"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"

            android:layout_marginTop="24dp"
            android:layout_height="wrap_content" android:id="@+id/btn_cancel"
            style="@style/AppTheme"
            android:background="@drawable/btn_rounded_cancel"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp" app:layout_constraintTop_toBottomOf="@+id/book_author"
            android:onClick="clickCancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>

