<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/et_name"
            style="@style/AppTheme"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/et_lastName" android:layout_marginBottom="20dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lastName"
            style="@style/AppTheme"
            android:ems="10"
            android:id="@+id/et_lastName"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_identifier" android:layout_marginBottom="20dp"
            android:autofillHints="@string/lastName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/identifier"
            android:ems="10"
            style="@style/AppTheme"
            android:id="@+id/et_identifier"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_login" android:layout_marginBottom="70dp"
            android:autofillHints="@string/identifier"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_login"
            style="@style/AppTheme"
            android:background="@drawable/btn_rounded"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="100dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

