<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:paddingStart="20dp"
                                                   android:paddingEnd="20dp"
                                                   android:paddingTop="50dp"
                                                   android:paddingBottom="50dp"
>

    <TextView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:textSize="36sp"
            android:text="@string/confirm_delete"
            android:ems="10"
            android:id="@+id/confirm_delete"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>

    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:paddingHorizontal="40dp"
            android:layout_height="wrap_content" android:id="@+id/btn_delete"
            style="@style/AppTheme"
            android:background="@drawable/btn_small_rounded"
            android:textSize="16sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/book_delete_placeholder"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"

            android:layout_height="wrap_content" android:id="@+id/btn_cancel"
            style="@style/AppTheme"
            android:background="@drawable/btn_rounded_cancel"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/book_delete_placeholder"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="0dp"
            android:textSize="36sp"
            android:layout_height="wrap_content" android:id="@+id/book_delete_placeholder"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/confirm_delete" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>
