<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/answer"
            android:background="@android:color/transparent"
            android:id="@+id/answer"
            app:layout_constraintTop_toBottomOf="@+id/question" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:shadowDx="1"
            android:shadowColor="@color/design_default_color_on_secondary" android:shadowDy="1"
            android:shadowRadius="1" android:autofillHints="@string/answer"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"/>

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"
            android:layout_height="wrap_content" android:id="@+id/btn_save"
            style="@style/AppTheme"
            android:background="@drawable/btn_small_rounded"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/answer" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"

            android:layout_height="wrap_content" android:id="@+id/btn_cancel"
            style="@style/AppTheme"
            android:background="@drawable/btn_rounded_cancel"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
