<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/book_card_bg"

                                                   android:id="@+id/book_adapter_layout"
                                                   android:paddingBottom="16dp" android:paddingLeft="20dp"
                                                   android:paddingTop="4dp" android:paddingRight="4dp">
    <TextView
            android:text="@string/reading_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_reading_date"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/reading_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_reading_duration"
            app:layout_constraintEnd_toStartOf="@+id/lbl_reading_no_pages"
            app:layout_constraintStart_toEndOf="@+id/lbl_reading_date" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.415"/>
    <TextView
            android:text="@string/reading_number_of_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lbl_reading_no_pages"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"/>

    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/reading_date"
            app:layout_constraintTop_toBottomOf="@+id/lbl_reading_date"
            app:layout_constraintStart_toStartOf="@+id/lbl_reading_date"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/reading_duration"
            app:layout_constraintTop_toBottomOf="@+id/lbl_reading_duration"
            app:layout_constraintStart_toStartOf="@+id/lbl_reading_duration"/>
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/reading_no_pages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_reading_no_pages" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/lbl_reading_no_pages"/>
</androidx.constraintlayout.widget.ConstraintLayout>
