<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:paddingStart="20dp"
                                                   android:paddingEnd="20dp"
                                                   android:paddingTop="50dp"
                                                   android:paddingBottom="50dp"
>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/question"
            style="@style/AppTheme"
            android:ems="10"
            android:id="@+id/question"
            android:autofillHints="@string/question"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content" android:id="@+id/btn_save"
            style="@style/AppTheme"
            android:background="@drawable/btn_small_rounded"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"

            android:layout_height="wrap_content" android:id="@+id/btn_cancel"
            style="@style/AppTheme"
            android:background="@drawable/btn_rounded_cancel"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/question"/>

</androidx.constraintlayout.widget.ConstraintLayout>
