<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="@drawable/book_card_bg"
                                                   android:id="@+id/book_adapter_layout"
                                                   android:paddingBottom="16dp" android:paddingLeft="20dp"
                                                   android:paddingTop="4dp" android:paddingRight="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="135dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/questionsAnswered"
                app:layout_constraintStart_toEndOf="@+id/lbl_questions_answered"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.404"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/questions_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lbl_questions_answered"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:text="@string/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/book_title"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/author"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/book_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>
