<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BookReadingLogActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="64dp"
            android:paddingBottom="56dp"
            android:background="@drawable/purple_bg"
            android:id="@+id/constraintLayout" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="135dp"
                android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:textColor="@color/colorWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/questionsAnswered"
                    app:layout_constraintStart_toEndOf="@+id/lbl_questions_answered"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.404" app:layout_constraintTop_toBottomOf="@+id/hoursRead"
                    android:layout_marginTop="32dp"/>
            <TextView
                    android:text="@string/questions_answered"
                    android:textColor="@color/colorWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lbl_questions_answered"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/lbl_hours_read"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:textColor="@color/colorWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/hoursRead"
                    app:layout_constraintStart_toEndOf="@+id/lbl_hours_read"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/hours_read"
                    android:textColor="@color/colorWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lbl_hours_read"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:text="@string/book_title"
                android:textColor="@color/colorWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/book_title"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:textSize="24sp" android:textStyle="bold"/>
        <TextView
                android:text="@string/book_author"
                android:textColor="@color/colorWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/author"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/book_title"
                android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.478"
            android:id="@+id/constraintLayout2" tools:ignore="RtlSymmetry">

        <Button
                android:text="@string/add_reading_log"
                android:layout_width="134dp"
                android:background="@drawable/btn_small_rounded"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_height="40dp" android:id="@+id/button"
                android:onClick="showNewLogDialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/listView" app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
    </ListView>
</androidx.constraintlayout.widget.ConstraintLayout>
