<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BookQuestionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="64dp"
            android:paddingBottom="56dp"
            android:background="@drawable/purple_bg"
            android:id="@+id/constraintLayout" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="135dp"
                android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:textColor="@color/colorWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/questionsAnswered"
                    app:layout_constraintStart_toEndOf="@+id/lbl_questions_answered"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.404"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/questions_answered"
                    android:textColor="@color/colorWhiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lbl_questions_answered"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:text="@string/book_title"
                android:textColor="@color/colorWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/book_title"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:textSize="24sp" android:textStyle="bold"/>
        <TextView
                android:text="@string/book_author"
                android:textColor="@color/colorWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/author"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/book_title"
                android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/rvBookQuestionItems" app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
    </ListView>
</androidx.constraintlayout.widget.ConstraintLayout>
